--- a/product-info.html
+++ b/product-info.html
@@ -10,10 +10,14 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-</head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
+</head>
+<body style="background-color:#e0c271">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1" id="menu">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link active" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -32,17 +36,145 @@
           </li>
           <li class="nav-item">
           </li>
-        </ul>
-      </div>
-    </div>
+          <li class="nav-item">
+            <a class="nav-link active" id="profile"><span id="input"></span></a>
+   <ul>
+   <li class="nav-item"></li><a class="nav-link" href= "cart.html">Mi carrito</a></li>
+   <li class="nav-item"></li><a class="nav-link" href="my-profile.html">Mi perfil</a></li>
+   <li class="nav-item"></li><a class="nav-link" id= "bye-bye" href="login.html">Cerrar sesión</a></li>
+   </ul>
+   </li>
+  </ul>
   </nav>
-  <main>
-     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+    </div>
+  <main class="pb-5">
+    <section style="background-color: #e0c271">
+      <div class="row">
+        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+          <div class="row container p-0 m-0">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+      <div class="row">
+        <div class="list-group" id="cat-list-container">
+        </div>
       </div>
     </div>
+    <br>
+    <div id="show-each"></div>
+    <br>
+    
+      <div id="relatedProductsContainer"></div>
+    <hr>
+  </div>
+    <div class="container">
+      <h2 id="opiniones"> Opiniones </h2>
+      <br>
+     <div id="load-comments"></div>
+      <br>
+      
+    </div>
+  <div class="container" id="comento">
+    <h2 class="container"><strong> Comentar </strong></h2>
+    <br>
+    <div class="container">
+    <!--  <div class="star-widget"id="comentar">
+        <input type="radio" name="rate" id="rate-5">
+        <label for="rate-5" class="fas fa-star"></label>
+        <input type="radio" name="rate" id="rate-4">
+        <label for="rate-4" class="fas fa-star"></label>
+        <input type="radio" name="rate" id="rate-3">
+        <label for="rate-3" class="fas fa-star"></label>
+        <input type="radio" name="rate" id="rate-2">
+        <label for="rate-2" class="fas fa-star"></label>
+        <input type="radio" name="rate" id="rate-1">
+        <label for="rate-1" class="fas fa-star"></label>
+      </div>
+    </div>-->
+
+
+   <div class="input-group">
+    <span class="input-group-text">Tu opinión</span>
+    <textarea class="form-control" placeholder="Escribe aquí tu opinión del producto" aria-label="With textarea" required></textarea>
+  </div>
+    <br>
+
+
+    <div class="rating-css">
+      <div>Tu puntuación</div>
+      <div class="star-icon">
+        <input type="radio" name="rating1" id="rating1">
+        <label for="rating1" class="fa fa-star"></label>
+        <input type="radio" name="rating1" id="rating2">
+        <label for="rating2" class="fa fa-star"></label>
+        <input type="radio" name="rating1" id="rating3">
+        <label for="rating3" class="fa fa-star"></label>
+        <input type="radio" name="rating1" id="rating4">
+        <label for="rating4" class="fa fa-star"></label>
+        <input type="radio" name="rating1" id="rating5">
+        <label for="rating5" class="fa fa-star"></label>
+      </div>
+    </div>
+     <!--
+   <span class="container" id="puntuacion"label for="score">Tu puntuación </label></span>
+    <input type="number" max="5" min="0" id="score" name="score" class="form-control" placeholder="Entre 0 y 5" required>
+  </div>
+    <div class="clasificacion"></div>
+
+
+    <select id="puntaje">
+      <option value=1>1</option>
+      <option value=2>2</option>
+      <option value=3>3</option>
+      <option value=4>4</option>
+      <option value=5>5</option>
+
+  </select>
+
+  <span id="calif"></span>-->
+  <br>
+  <br>
+  <br>
+<!--
+<input id="radio5" type="radio" name="estrellas" value="5">
+<label for="radio5">★</label>
+<input id="radio4" type="radio" name="estrellas" value="4">
+<label for="radio4">★</label>
+<input id="radio3" type="radio" name="estrellas" value="3">
+<label for="radio3">★</label>
+  <input id="radio2" type="radio" name="estrellas" value="2">
+  <label for="radio2">★</label>
+<input id="radio1" type="radio" name="estrellas" value="1">
+<label for="radio1">★</label>
+-->
+
+<!--
+<div class="fichas-listado-v2">
+  <div class="voto">
+    <div class="voto-estrellas">
+      <i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+    </div>
+  </div>
+ </div>
+
+
+ <div class="ec-stars-wrapper">
+	<a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+	<a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+	<a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+	<a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+	<a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+</div>-->
+
+    <button class="btn btn-primary" id="send-comment">Enviar </button>
+    <br>
+    <br>
+</div>
+</section>
   </main>
+
+  
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
