--- a/cart.html
+++ b/cart.html
@@ -168,9 +168,6 @@
         Por favor, selecciona tu departamento.
       </div>
     </div>
-   <!-- <div class="col-12">
-      <button id="btn-form" class="btn btn-primary" type="submit">Validar formulario</button>
-    </div>-->
     <br>
     <br>
     
@@ -180,19 +177,18 @@
       <ul class="list-group mb-3">
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Subtotal</h6>
+            <h6 class="my-0" style="text-align: left">Subtotal</h6>
             <small class="text-muted"> Costo unitario del producto por cantidad</small>
           </div>
           <span class="text-muted" id="productCostText">USD 15200</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Costo de envío</h6>
+            <h6 class="my-0"style="text-align: left">Costo de envío</h6>
             <small class="text-muted">Según el tipo de envío</small>
           </div>
           <span class="text-muted" id="envioText">-</span>
         </li>
-      
         <li class="list-group-item d-flex justify-content-between">
           <span>Total ($)</span>
           <strong id="totalCostText">-</strong>
