--- a/my-profile.html
+++ b/my-profile.html
@@ -47,7 +47,7 @@
           <li class="nav-item">
           </li>
           <li class="nav-item">
-            <a class="nav-link active" id="profile"><span id="input"></span></a>
+            <a class="nav-link" href="#" id="profile"><span id="input"></span></a>
    <ul>
    <li class="nav-item"></li><a class="nav-link" href= "cart.html">Mi carrito</a></li>
    <li class="nav-item"></li><a class="nav-link" href="my-profile.html">Mi perfil</a></li>
@@ -64,10 +64,9 @@
           <div class="col-9">
             <br>
             <br>
-            <h2 class="text-white mb-4">Perfil
-                           <img id="fotitoUsuario"  class="img-thumbnail" style="float:right"   src="images (3).jpg"></img>
+            <h2 class="text-black mb-4">Perfil &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <img id="fotitoUsuario"  class="img-thumbnail" style="float:right 70px"   src="beautiful-latin-woman-avatar-character-icon-free-vector.jpg"></img>
             </h2>
-                        <br>
             <hr>
             <div class="card" style="border-radius: 15px;">
               <div class="card-body">
@@ -126,7 +125,7 @@
                 </div>
                   <div class="col-md-3">
                     <label for="telefono" class="form-label">Teléfono de contacto*</label>
-                    <input type="number" class="form-control" id="telefono" placeholder="099123456"required>
+                    <input type="number" class="form-control" id="telefono" placeholder="099123456"required minlength="9">
                   </div>
                   <div class="valid-feedback">
                     Bien
@@ -141,7 +140,7 @@
                   </div>
                   
                   <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                    <button type="submit" class="btn btn-primary" id="guardoPerfil">Guardar cambios</button>
                   </div>
                 </form>
     
@@ -156,6 +155,26 @@
       </div>
     </div>
   </main>
+
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+    </symbol>
+    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+    </symbol>
+    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+    </symbol>
+  </svg>
+    <div class="alert alert-success d-flex alert-dismissible fade" role="alert" id="guardeDatitos">
+      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+      <div>
+        Datos guardados correctamente!
+      </div>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
