--- a/products.html
+++ b/products.html
@@ -10,6 +10,8 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/9132b90a11.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body style="background-color:#e0c271">
@@ -61,17 +63,27 @@
             </svg>
           </label>
           <input type="button"  class="btn btn-dark" name="options" id="sortDesc">
-          <label  class="btn btn-dark"" for="sortDesc">Precio descendente
+          <label  class="btn btn-dark" for="sortDesc">Precio descendente
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sort-down" viewBox="0 0 16 16">
               <path d="M3.5 2.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 11.293V2.5zm3.5 1a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zM7.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zm0 3a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
             </svg>
           </label>
           <input type="button"  class="btn btn-dark" name="options" id="relevance" checked>
-          <label  class="btn btn-dark"" for="relevance">Relevancia
+          <label  class="btn btn-dark" for="relevance">Relevancia
             <i class="fas fa-sort-amount-down mr-1"></i></label>
         </div>
       </div>
     </div>
+
+    <div class="form-floating mb-3">
+      <label for="buscadorProductos"style="background-color:white position:relative; top:-10px;"><i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+      </label> 
+      <input type="search" name="buscadorProductos" id="buscadorProductos" style="height: 30px;" placeholder="Busca tu categoría" class="form-control col align-self-end" > </div>
+    <br>
+    <br>
+
+   </div>
+
     <div class="row">
       <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
         <div class="row container p-0 m-0">
