--- a/my-profile.html
+++ b/my-profile.html
@@ -65,7 +65,7 @@
             <br>
             <br>
             <h2 class="text-black mb-4">Perfil &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <img id="fotitoUsuario"  class="img-thumbnail" style="float:right 70px"   src="beautiful-latin-woman-avatar-character-icon-free-vector.jpg"></img>
+                           <img id="fotitoUsuario"  class="img-thumbnail" style="float:right 70px"   src="img\default-perfil.jpg"></img>
             </h2>
             <hr>
             <div class="card" style="border-radius: 15px;">
