--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/9132b90a11.js" crossorigin="anonymous"></script>
   <link href="css/styles.css" rel="stylesheet">
 </head>
 <body style="background-color:#e0c271">
@@ -52,11 +53,11 @@
     <td>Costo</td>
     <td>Cantidad</td>
     <td>Subtotal</td>
-
+    <td></td>
    </table>
    
 <br>
-<br>
+
 
 <div class="container" id="envio">
    <h4> Tipo de envío</h4>
